--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "flickity": "^2.3.0",
     "framer-motion": "^10.12.23",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-flickity-component": "^4.0.6",
     "react-headroom": "^3.2.1",
     "react-multi-carousel": "^2.8.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
+    "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
